[package]
name = "guilt"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
colored = "3.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.16"
terminal_size = "0.4.3"
charts-rs = { version = "0.3.24", features = ["image-encoder"] }
regex = "1.11.2"
dialoguer = "0.12.0"
anyhow = "1.0.99"
genpdf = { version = "0.2.0", features = ["images"] }
image = "0.23.12"