[package]
name = "guilt"
version = "1.2.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
colored = "3.1.1"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
terminal_size = "0.4.3"
charts-rs = { version = "0.3.27", features = ["image-encoder"] }
regex = "1.12.2"
dialoguer = "0.12.0"
anyhow = "1.0.100"
genpdf = { version = "0.2.0", features = ["images"] }
image = "0.23.14"
fs_extra = "1.3.0"
tempfile = "3.24.0"
async-trait = "0.1.89"
rhai = { version = "1.24.0", features = ["sync"] }
nom = "8.0.0"