[project]
name = "guilt"
version = "0.1.0"
description = "GUILT: Green Usage Impact Logging Tool"
authors = [{ name = "George Roe", email = "george.roe@stfc.ac.uk" }]
dependencies = [
    "httpx",
    "plotext"
]
requires-python = ">=3.9"

[project.scripts]
guilt = "guilt.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
